:necktie: Fix missing paddings.

--- a/markup/modules/page-slider/page-slider.styl
+++ b/markup/modules/page-slider/page-slider.styl
@@ -9,10 +9,13 @@
   overflow hidden
   position fixed
   max-width: 1440px
+  padding-bottom: 80px
   width 100%
   &:first-child
     display block
     position absolute
+  &:last-child
+    padding-bottom: 0
 
 .detached-screen_overlay
   background #000
